<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:src="@mipmap/google"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:strokeWidth="1dp"
                    app:strokeColor="#A4A4A4">
                    <TextView
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"/>
                </com.google.android.material.card.MaterialCardView>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/micro2"/>
            </LinearLayout>
            <ImageView
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:src="@mipmap/imagen"
                android:layout_margin="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/texto"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/texto2"
                android:textSize="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageview"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:src="@mipmap/cnn" />
                <TextView
                    android:id="@+id/textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cnn"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/menu"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">
                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/texto3"
                        android:textSize="20sp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/texto4"
                        android:textSize="15sp"
                        android:layout_marginEnd="5dp"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:src="@mipmap/espacio"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/npr"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:src="@mipmap/npr" />
                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/npr"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/menu"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>
            <ImageView
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:src="@mipmap/imagen"
                android:layout_margin="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="El hombre más guapo del Planeta"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:src="@mipmap/imagen"
                android:layout_margin="20dp"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <include layout="@layout/include"/>
        <include layout="@layout/include"/>
        <include layout="@layout/include"/>
        <include layout="@layout/include"/>
        <include layout="@layout/include"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>